Add JAR release support with timestamped output